<resources>
    <string name="app_name">PIXELAPP</string>
    <string name="shop">SHOP</string>
    <string name="delivery">DELIVERY</string>
    <string name="home">HOME</string>
    <string name="account">ACCOUNT</string>
    <string name="favorites">FAVORITES</string>
    <string name="settings">SETTINGS</string>
    <string name="display">K H O P K A</string>
    <string name="hide">H I D E</string>
    <string name="fab">FAB</string>
    <string name="play">PLAY</string>
    <string name="finch">FINCH 🤖 </string>
    <string name="actors">Tom Hanks, Robot "Finch"</string>
    <string name="longMovies">145min</string>
    <string name="watch">WATCH</string>
    <string name="version">2.1.1</string>
    <string name="main">MAIN</string>
    <string name="video">VIDEO</string>
    <string name="location">LOCATION</string>
    <string name="contacts">CONTACTS</string>
    <string name="help">HELP</string>
    <string name="developer">DEVELOPER</string>
    <string name="details">Details</string>
    <string name="catalog">CATALOG</string>
    <string name="title">Shop</string>
    <string name="info">More Info</string>
    <string name="snackbar">Film about man and his robot</string>
    <string name="pleasantViewing">ПРИЯТНОГО ПРОСМОТРА</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>