<?xml version="1.0" encoding="UTF-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/sectTopBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="13.1">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/black"
                        app:title="@string/app_name"
                        app:titleMarginStart="@android:dimen/app_icon_size"
                        app:titleTextColor="@color/white"
                        app:menu="@menu/top_menu"
                        app:navigationIcon="@drawable/menu"
                        style="@style/Widget.MaterialComponents.Toolbar.Primary"

                        />

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/menu"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/black"
                        app:title="@string/title"
                        app:titleTextColor="@color/white"
                        app:menu="@menu/menu"
                        app:navigationIcon="@drawable/menu"
                        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

                </com.google.android.material.appbar.AppBarLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <FrameLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </androidx.appcompat.widget.LinearLayoutCompat>




<!--        <FrameLayout-->
<!--            android:id="@+id/content"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->



        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNav"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                android:elevation="16dp"
                app:itemIconTint="@color/color_tab"
                app:itemTextColor="@color/color_tab"
                app:menu="@menu/bottom_menu" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>



        <!--Внутри MaterialCardView должен находиться ConstraintLayout-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="336dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:strokeWidth="1dp"
            app:strokeColor="@android:color/white"
            app:cardElevation="0dp"
            android:focusable="true"
            android:checkable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baner">

                <Button
                    android:id="@+id/buttonMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/play"
                    android:textColor="@color/white"
                    android:text="@string/info"
                    android:textSize="11dp"
                    style="?attr/materialButtonOutlinedStyle"
                    />



                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_tab"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:icon = "@drawable/settings"
                        android:textColor="@color/white"
                        android:text="@string/info"
                        android:textSize="11dp"
                        style="@style/Widget.MaterialComponents.Button"
                        />




                    <Button
                        android:id="@+id/fullIconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_tab"
                        app:strokeColor = "@color/black"
                        app:strokeWidth = "2dp"
                        app:icon = "@drawable/settings"
                        android:textColor="@color/white"
                        android:text="@string/info"
                        android:textSize="11dp"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        />



                </com.google.android.material.button.MaterialButtonToggleGroup>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="10dp"
                    android:text="@string/finch"
                    android:background="@drawable/background_rounded"
                    android:textColor="@color/white"
                    app:emojiCompatEnabled="true"
                    android:radius="5dp"
                    android:topRightRadius="100dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actorsMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="10dp"
                    android:text="@string/actors"
                    android:background="@drawable/background_rounded"
                    android:textColor="@color/white"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/icon_favorites"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:buttonTint="@android:color/white"/>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





</layout>